Добавил логи и улучшил читаемость кода